CURRIKI-3347 Resource View/Edit: Tabs Wrap Fix
svn@16283

--- a/web/src/main/webapp/skins/curriki8/views.css
+++ b/web/src/main/webapp/skins/curriki8/views.css
@@ -42,6 +42,7 @@ pre.htmlview {
 p {margin: 1em 0;}
 
 #asset-wrapper { 
+	float: left;
 	padding: 8px 0;
 	width: 100%;
 }
@@ -291,7 +292,6 @@ ul#asset-tabs li a:hover {
 	padding: 5px 10px;
 	border: 1px solid #000;
  	clear: left;
- 	float: none; 
 }
 
 .asset-display-text {
@@ -1234,4 +1234,8 @@ line-height: 21px !important;
 
 *+html #asset-wrapper-inner {clear: left !important; float: none !important;}
 **/
-}
+
+
+* html #asset-wrapper {float: none !important;}
+
+*+html #asset-wrapper {float: none !important;}
